src/test/deca/syntax/valid/conversion_type.deca
// Description:
//    Minimalistic program to test type conversions.
//
// Results:
//    None
//
// History:
//    Created on 19/01/2025
{
    int x = 5;
    float y = x + 3.2;
    print(y);
}
